# BroCast-backend

./: .dockerignore  .ebignore  .flake8  .flaskenv  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  app.py  application.py  boot.sh  config.py  docker-compose.yml  main.py  manage.py  pyproject.toml  requirements.txt  requirements_old.txt
app/: __init__.py  boot.sh  config.py  main.py  main_cron.py
app/app/: database.py
app/app/celery_worker/: tasks.py
app/app/config/: config.py
app/app/models/: __init__.py  bro.py  (+5 more)
app/forms/: __init__.py
app/migrations/: env.py
app/models/: __init__.py  bro.py  bro_bros.py  broup.py  broup_message.py  log.py  message.py
app/rest/: __init__.py  add.py  add_bro.py  add_bro_to_broup.py  add_broup.py  all.py  all_v1_2.py  block_bro.py  delete_broup.py  get_bros.py  get_broup.py  get_broup_bros.py  get_chat.py  get_message.py  get_messages.py  get_messages_broup.py  get_messages_broup_v1_3.py  get_messages_v1_3.py  login.py  login_v1_1.py  login_v1_3.py  notification.py  read_logs.py  register.py  register_v1_1.py  register_v1_3.py  remove_bro.py  remove_registration.py  report_bro.py  report_broup.py  search.py  search_v1_2.py  send_message.py  test.py  update_registration_id.py
app/routes/: __init__.py  api_get.py  api_post.py  api_register.py  hello_world.py  home.py  register.py
app/sock/: __init__.py  chat_admins.py  chat_details.py  last_read_time.py  message.py  notification.py  sock.py  sock_add.py  test.py  update.py
app/templates/: about.html  bros.html  home.html  index.html  messages.html  privacy.html  register.html  terms.html
app/util/: remove_last_occur.py
emojis/: create_emoji_json.py  create_emoji_json_1_0.py  create_emoji_json_2_0.py  emoji_1_0.json
kubernetes/: flask.yaml  flask_secret_local.yaml  namespace.yaml  postgres.yaml  redis.yaml
migrations/: env.py
migrations/versions/: 04ff95f45748_now_really_added_the_message_table.py  0750cb7beb0a_increase_password_and_message_size.py  07cc036446ac_removed_the_device_type.py  12c0145d603b_create_table_bro_with_associate_table_.py  1e39cd176d63_changed_body_to_be_text_instead_of_.py  21995a0eb6ec_added_alias_to_brobros_and_broups.py  264bc9b4023e_removed_foreign_key.py  26720ded42e3_added_bro_group_object.py  2bd31204deec_added_accepted_column_to_determine_if_.py  39d3ba6e2731_added_associate_table_between_user_and_.py  3d02e638d9e0_also_adding_mute_timestamp_to_a_normal_.py  45064f47ab31_added_activity_time_on_chat_to_sort_.py  45121d14a991_removed_one_time_read_since_it_s_not_.py  45a21a7bf424_added_a_logging_table.py  45cff38bfc03_added_data_to_broup_messages.py  4ba50a63f008_changed_blocked_to_mute_in_broup_objects.py  4c4ce8a129a8_added_unread_messages_column.py  50557a2d2fd8_adding_textmessage_to_a_message_for_.py  5b42b31a5733_added_a_indicator_for_leaving_the_broups.py  5e3f94205cfa_removed_unique_constraint.py  6510bfc37817_added_a_blocked_boolean_to_the_chat_so_.py  6894e4416cfa_also_have_to_do_it_for_normal_chats_.py  6b57417d70f8_added_broup_messages.py  6d04e122cf31_added_info_indicator_to_broup_messages.py  6ea95814d54c_added_chat_descrption.py  79798e7c6e36_added_registration_id_to_bro.py  79c00d41dafa_add_bromotion_to_the_bros.py  7eeb5375773b_add_registration_id_to_a_bro_for_.py  82070cd9b0ea_added_roomname_to_the_brosbro_and_last_.py  8d8029d633d8_added_device_type_to_the_bro.py  8f6993dfb0d1_added_message_object.py  8f98fe9aa52b_added_a_timestamp_array_for_block_.py  900e62e0c894_added_the_name_of_the_chat.py  96df95c06d22_create_bro_tables.py  975398824c89_create_table_bro_and_brobros.py  9972e2a187ed_create_table_bro_and_associate_table_.py  9f66cae00cf9_added_broup_admin_indicators.py  a6665a73c108_added_a_mute_timestamp_to_the_broups.py  afe4d9070f9e_added_bro_and_brosbro_to_keep_track_of_.py  b01281a7e596_adding_data_to_messages.py  (+10 more)
test/: user_test.py
(+160 files in other folders)
