[tool.black]
line-length = 100

[tool.isort]
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip = ["app/migrations/env.py"]

[tool.poetry]
name = "BroCast"
version = "1.6.1"
description = "BroCast! The chat app where you can chat with your bros!"
authors = ["Zwaar Developers"]
license = "GPL-3.0 license"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.3"
fastapi = "0.115.13"
uvicorn = "0.34.3"
python-dotenv = "1.1.0"
psycopg2-binary = "2.9.10"
sqlmodel = "0.0.24"
alembic = "1.16.2"
asyncpg = "0.30.0"
passlib = "1.7.4"
authlib = "1.6.0"
oauthlib = "3.3.1"
python-socketio = "5.13.0"
websockets = "15.0.1"
asyncio-redis = "0.16.0"
redis = "6.2.0"
pillow = "11.2.1"
fastapi-pagination = "0.13.2"
fastapi-mail = "1.5.0"
celery = "5.5.3"
APScheduler = "3.11.0"
pydantic_settings = "2.9.1"
requests = "2.32.4"
PyJWT = "2.10.1"
python-multipart = "0.0.20"
pytz = "2025.2"
firebase-admin = "6.9.0"
firebase_functions = "0.4.3"
numpy = "2.3.0"
opencv-python-headless = "4.11.0.86"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
